# Bildungsurlaub_GenerativeKImitPython

./: .gitignore  README.md  command_line.md  pyproject.toml  requirements.txt
ai_docs/tasks/: streamlit_frontend_table_rag.md
ai_docs/templates/: ai_task_template_gemini.md
scripts/M01_Einführung/: 45_semantic_router.py
scripts/M07_VectorDB_RAG/table_rag/: app.py
scripts_MSO/day 1/: model_chat_openai.py  model_chat_openrouter.py  script_1.py
scripts_MSO/day 2/: Image_groq.py  JSON_parser.py  JSON_parser_multiple.py  JSON_parser_multiple_windpark.py  Ollama_test.py  assumption_checker.py  parallel_chain_Sinn_des_Lebens.py  simple_chain.py  simple_chain_story.py  translator_de_en_test.py
scripts_MSO/day 3/vector DB/: Faust1.txt  Faust2.txt  data_loader_exercise.py  data_loading.py  data_loading_textsplitter.py  load_pdf_image.py  my_text.txt  rag_trial.py
scripts_MSO/day 4/: AI Task Planning — Dash Snake (Nokia 3210).md  Agent_JupyterNotebook.ipynb  Markstammdatenreg_RAG.py  Wind_MVP.csv  code_von_Alex.py
scripts_MSO/day 4/AI Snake/: README.md  dash_snake.py  game_engine.py
scripts_MSO/day 4/Markstammdatenregister/: AI Task Planning — Dash Windpark Uncertainty.md  index.pkl
scripts_MSO/day 4/dash_windpark/: README.md  __init__.py  aep_calc.py  dash_app.py  windpro_io.py
scripts_MSO/day 5/: .gitignore  01_app.py  AI Task Planning Template.md  AI_Task_Plan_Wind_Turbine_App.md  Procfile  inspect_csv.py  requirements.txt  wind_turbine_app.py
scripts_MSO/day 5/Artikel_schreib_KI_Catrin_Ulrich/: Artikel_schreiber_KI.py
(+7 files in other folders)
