[project]
name = "GenerativeKImitPython"
version = "1.0"
description = "Das ist unser Repository für den Kurs 'Generative KI mit Python'"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "chardet>=5.2.0",
    "ipykernel>=6.29.5",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.3",
    "langchain-experimental>=0.3.3",
    "langchain-groq>=0.2.0",
    "langchain-faiss>=0.1.1",
    "langchain-ollama>=0.3.0",
    "langchain-pymupdf4llm>=0.4.1",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.3",
    "langchain>=0.3.4",
    "langgraph>=0.2.39",
    "matplotlib>=3.9.2",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "rich>=13.9.4",
    "markdown>=3.7",
    "streamlit>=1.50.0",
    "sentencepiece>=0.2.1",
    "wikipedia>=1.4.0",
    "faiss-cpu>=1.13.0",
    "dash>=3.3.0",
    "pytest>=9.0.1",
    "plotly>=6.5.0",
]
